--- a/TestInsurance/dashboard/templates/display.html
+++ b/TestInsurance/dashboard/templates/display.html
@@ -7,8 +7,8 @@
   <h1>Data stored</h1>
   {% if data_list %}
    {% for data in data_list %}
-    <p>Name: {{ data.name }}</p>
-    <p>Value: {{ data.value }}</p>
+    <p>Name: {{ data.Name }}</p>
+    <p>Value: {{ data.Value }}</p>
    {% endfor %}
   {% else %}
     <p>No data to display.</p>
