--- a/TestInsurance/dashboard/templates/draft_htmls/BCK_form.html
+++ b/TestInsurance/dashboard/templates/draft_htmls/BCK_form.html
@@ -7,11 +7,11 @@
   <h1>Form</h1>
   <form method="POST" action="/submit/">
     {% csrf_token %}
-    <label for="Name">Name:</label><br>
+    <label for="name">Name:</label><br>
     <input type="text" id="name" name="name"><br>
-    <label for="Value">Value:</label><br>
+    <label for="value">Value:</label><br>
     <input type="text" id="value" name="value"><br><br>
-    <input type="submit" value="Submit">
+    <input type="submit">Submit</button>
   </form> 
 </body>
 </html>
